--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <script src="compiled/src/views/CardView.js"></script>
     <script src="compiled/src/views/HandView.js"></script>
+    <script src="compiled/src/views/GameView.js"></script>
     <script src="compiled/src/views/AppView.js"></script>
-
 
     <script src="compiled/src/main.js"></script>
   </body>
