--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <script src="compiled/src/collections/Deck.js"></script>
     <script src="compiled/src/models/App.js"></script>
     <script src="compiled/src/models/Game.js"></script>
+    <script src="compiled/src/models/Money.js"></script>
+    <script src="compiled/src/collections/MoneyCollection.js"></script>
 
     <script src="compiled/src/views/CardView.js"></script>
+    <script src="compiled/src/views/MoneyView.js"></script>
+    <script src="compiled/src/views/MoneyCollectionView.js"></script>
     <script src="compiled/src/views/HandView.js"></script>
     <script src="compiled/src/views/GameView.js"></script>
     <script src="compiled/src/views/AppView.js"></script>
